keycloak/database.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-pg
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      name: keycloak-pg
  template:
    metadata:
      labels:
        name: keycloak-pg
    spec:
      containers:
        - name: keycloak-pg
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-data
          resources:
            limits:
              memory: "1Gi"
              cpu: "0.5"
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: keycloak-pg
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-pg
  namespace: keycloak
spec:
  ports:
    - protocol: TCP
      port: 5432
  selector:
    name: keycloak-pg
